tests/NormalTests/paczka1/fuzzy1/69371035.err
Error in line 4: 7hnaVJiJ0am S93 36,1
Error in line 6: 7hnaVJiJ0am S627 32,0
Error in line 7: yMxr S573 60,8
Error in line 12: yMxr S93 51,4
Error in line 11: 7hnaVJiJ0am S93 40,9
Error in line 25: yMxr A320 -1,3
Error in line 22: 7hnaVJiJ0am S573 24,4
Error in line 37: XqVvcl S93 355,7
Error in line 35: ftLE S573 7,2
